--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,15 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.validationQuery=select'x'
+spring.datasource.maxActive=1000
+spring.datasource.initialSize=100
+spring.datasource.maxWait=60000
+spring.datasource.minIdle=500
 
 #redis
 redis.host=192.168.206.129
 redis.port=6379
-redis.timeout=3
-redis.poolMaxTotal=10
-redis.poolMaxIdle=10
-redis.poolMaxWait=3
+redis.timeout=10
+redis.poolMaxTotal=1000
+redis.poolMaxIdle=500
+redis.poolMaxWait=500
