--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,27 @@ redis.poolMaxWait=500
 #spring.resources.chain.compressed=true
 #spring.resources.chain.html-application-cache=true
 #spring.resources.static-locations=classpath:/static/
+
+#RabbitMQ
+spring.rabbitmq.host=192.168.206.129
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+#消费者数量
+spring.rabbitmq.listener.simple.concurrency= 10
+spring.rabbitmq.listener.simple.max-concurrency= 10
+#每次从队列取几个
+spring.rabbitmq.listener.simple.prefetch= 1
+#默认监听者自动启动
+spring.rabbitmq.listener.simple.auto-startup=true
+
+spring.rabbitmq.listener.simple.default-requeue-rejected= true
+#发送者的配置
+spring.rabbitmq.template.retry.enabled=true
+spring.rabbitmq.template.retry.initial-interval=1000
+spring.rabbitmq.template.retry.max-attempts=3
+spring.rabbitmq.template.retry.max-interval=10000
+spring.rabbitmq.template.retry.multiplier=1.0
+
+
